added linked in and git link

--- a/index.html
+++ b/index.html
@@ -108,13 +108,13 @@
             >sinchanaodiyoor@gmail.com</a
           >
           <a
-            href="https://github.com/your-github"
+            href="https://github.com/Bhuvana0210/"
             target="_blank"
             class="underline hover:text-indigo-600"
             >GitHub</a
           >
           <a
-            href="https://linkedin.com/in/your-linkedin"
+            href="www.linkedin.com/in/bhuvana-sinchana-2576541b2"
             target="_blank"
             class="underline hover:text-indigo-600"
             >LinkedIn</a
