added linked in and git link

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             >GitHub</a
           >
           <a
-            href="www.linkedin.com/in/bhuvana-sinchana-2576541b2/"
+            href="https://www.linkedin.com/in/bhuvana-sinchana-2576541b2/"
             target="_blank"
             class="underline hover:text-indigo-600"
             >LinkedIn</a
